# interaction_actions_for_navigation

./: .gitignore  README.md  dependencies.rosinstall  install_python3_env.sh  install_ros.sh
ia_ros/: CMakeLists.txt  package.xml
ia_ros/launch/: auto_ros_ia_node.launch  example_move_base.launch  example_move_base_no_slam.launch  example_real_map_sim.launch  example_sim_and_planner.launch  live_ros_ia_node.launch  ros_ia_node.launch  ros_sim_node.launch
ia_ros/scripts/: TODO.txt  ia_dashboard  ros_ia_node  ros_ia_node.py  ros_sim_node
python/: MANIFEST.in  pyproject.toml  setup.py
python/cIA/: cia.pyx  setup.py
python/examples/: test_ia.py  test_simulator.py
python/maps/: corridors.pgm  corridors.yaml  default.pgm  default.yaml
python/pyIA/: actions.py  agents.py  arguments.py  ia_planning.py  mdptree.py  paths.py  profile_ia.sh  simulator.py  state_estimation.py
python/pyIA/maps/: asl_graph.pickle
python/scenarios/: aslbusy.pickle  aslgroups.pickle  aslquiet.pickle  irosasl1.pickle  irosasl3.pickle  irosasl5.pickle  irosasl6.pickle  irosasl_office_j1.pickle  irosasl_office_j2.pickle  irosasl_office_j3.pickle  irosasl_office_j4.pickle  irosasl_office_j5.pickle  irosasl_office_j6.pickle  irosunity_scene_map1.pickle  irosunity_scene_map2.pickle  irosunity_scene_map4.pickle  none.pickle  rlasl2.pickle  rlasl_office_j2.pickle  rlasl_office_j3.pickle  rlunity_scene_map1.pickle  toyempty1.pickle
python/tools/: check_agent0_is_robot.py  draw_maps.py  draw_rl_scenes.py  draw_scenes.py  get_distance_to_goal.py  gui_graph_editor.py  gui_world_editor.py
(+14 files in other folders)
